[package]
name = "grr-gltf"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = "0.15"
grr = { git = "https://github.com/msiglreith/grr.git" }
anyhow = "1"
image = "0.23"
glutin = "0.26"
flink = { path = "../flink" }
glam = "0.11"
byteorder = "1"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "93af32f1077e287f011d1e168326f758885125ad" }

[profile.dev.package.image]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
