[package]
name = "shader"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
flink = { git = "https://github.com/msiglreith/flink.git" }
spirv-std = { git = "https://github.com/msiglreith/rust-gpu.git", branch ="gltf" }
