[package]
name = "shader"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
glace = { git = "https://github.com/msiglreith/glace.git" }
spirv-std = "0.4.0-alpha.3"
spirv-std-macros = "0.4.0-alpha.3"
